// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InitializedMDXEditor - Snapshots > matches snapshot in markdown mode 1`] = `
<div
  class="gap-4"
>
  <div
    class=""
    data-override-defaults="true"
  >
    <div
      aria-label="Markdown editing toolbar"
      class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
      data-override-defaults="true"
      data-testid="markdown-toolbar"
      role="toolbar"
    >
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
        data-size="icon"
        data-testid="markdown-emoji-button"
        data-variant="ghost"
        title="Emoji"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-smile size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M8 14s1.5 2 4 2 4-2 4-2"
          />
          <line
            x1="9"
            x2="9.01"
            y1="9"
            y2="9"
          />
          <line
            x1="15"
            x2="15.01"
            y1="9"
            y2="9"
          />
        </svg>
      </button>
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
        data-size="icon"
        data-testid="markdown-richtext-button"
        data-variant="ghost"
        title="Rich Text"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-type size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 4v16"
          />
          <path
            d="M4 7V5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2"
          />
          <path
            d="M9 20h6"
          />
        </svg>
      </button>
    </div>
    <textarea
      autocomplete="off"
      class="max-h-[60dvh] min-h-11 rounded-none pt-4 font-normal text-foreground placeholder:text-muted-foreground/70"
      data-testid="markdown-textarea"
      maxlength="1000"
      placeholder="Start writing your masterpiece"
      variant="inline"
    />
  </div>
  <div
    class="absolute"
    data-testid="mdx-editor-overlay-container"
  />
  <div
    class="dark-theme cursor-auto hidden"
    data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
    data-placeholder="Start writing your masterpiece"
    data-plugins-count="10"
    data-testid="mdx-editor"
    markdown=""
  >
    <div
      data-testid="toolbar"
    >
      <button
        data-testid="undo-redo"
      >
        Undo/Redo
      </button>
      <button
        data-testid="block-type-select"
      >
        Block Type
      </button>
      <button
        data-testid="bold-italic-toggles"
      >
        Bold/Italic
      </button>
      <button
        data-testid="strikethrough-toggle"
      >
        Strikethrough
      </button>
      <button
        data-testid="lists-toggle"
      >
        Lists
      </button>
      <button
        data-testid="insert-thematic-break"
      >
        Insert Break
      </button>
      <button
        data-testid="create-link"
      >
        Create Link
      </button>
      <button
        data-testid="code-toggle"
      >
        Code
      </button>
      <button
        data-testid="insert-code-block"
      >
        Insert Code Block
      </button>
      <button
        data-testid="button-with-tooltip-emoji"
        title="Emoji"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-smile size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M8 14s1.5 2 4 2 4-2 4-2"
          />
          <line
            x1="9"
            x2="9.01"
            y1="9"
            y2="9"
          />
          <line
            x1="15"
            x2="15.01"
            y1="9"
            y2="9"
          />
        </svg>
      </button>
      <button
        data-testid="button-with-tooltip-markdown"
        title="Markdown"
      >
        <svg
          class="size-6"
          fill="none"
          height="24"
          viewBox="0 0 208 128"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="m15 10c-2.7614 0-5 2.2386-5 5v98c0 2.761 2.2386 5 5 5h178c2.761 0 5-2.239 5-5v-98c0-2.7614-2.239-5-5-5zm-15 5c0-8.28427 6.71573-15 15-15h178c8.284 0 15 6.71573 15 15v98c0 8.284-6.716 15-15 15h-178c-8.28427 0-15-6.716-15-15z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            d="m30 98v-68h20l20 25 20-25h20v68h-20v-39l-20 25-20-25v39zm125 0-30-33h20v-35h20v35h20z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      data-testid="editor-content"
    >
      Editor Content
    </div>
  </div>
</div>
`;

exports[`InitializedMDXEditor - Snapshots > matches snapshot with approaching max length warning 1`] = `
<div>
  <div
    class="gap-4"
  >
    <div
      class="hidden"
      data-override-defaults="true"
    >
      <div
        aria-label="Markdown editing toolbar"
        class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
        data-override-defaults="true"
        data-testid="markdown-toolbar"
        role="toolbar"
      >
        <button
          class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
          data-size="icon"
          data-testid="markdown-emoji-button"
          data-variant="ghost"
          title="Emoji"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-smile size-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M8 14s1.5 2 4 2 4-2 4-2"
            />
            <line
              x1="9"
              x2="9.01"
              y1="9"
              y2="9"
            />
            <line
              x1="15"
              x2="15.01"
              y1="9"
              y2="9"
            />
          </svg>
        </button>
        <button
          class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
          data-size="icon"
          data-testid="markdown-richtext-button"
          data-variant="ghost"
          title="Rich Text"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-type size-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 4v16"
            />
            <path
              d="M4 7V5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2"
            />
            <path
              d="M9 20h6"
            />
          </svg>
        </button>
      </div>
      <textarea
        autocomplete="off"
        class="max-h-[60dvh] min-h-11 rounded-none pt-4 font-normal text-foreground placeholder:text-muted-foreground/70"
        data-testid="markdown-textarea"
        maxlength="1000"
        placeholder="Start writing your masterpiece"
        variant="inline"
      />
    </div>
    <div
      class="absolute"
      data-testid="mdx-editor-overlay-container"
    />
    <div
      class="dark-theme cursor-auto"
      data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
      data-placeholder="Start writing your masterpiece"
      data-plugins-count="10"
      data-testid="mdx-editor"
      markdown=""
    >
      <div
        data-testid="toolbar"
      >
        <button
          data-testid="undo-redo"
        >
          Undo/Redo
        </button>
        <button
          data-testid="block-type-select"
        >
          Block Type
        </button>
        <button
          data-testid="bold-italic-toggles"
        >
          Bold/Italic
        </button>
        <button
          data-testid="strikethrough-toggle"
        >
          Strikethrough
        </button>
        <button
          data-testid="lists-toggle"
        >
          Lists
        </button>
        <button
          data-testid="insert-thematic-break"
        >
          Insert Break
        </button>
        <button
          data-testid="create-link"
        >
          Create Link
        </button>
        <button
          data-testid="code-toggle"
        >
          Code
        </button>
        <button
          data-testid="insert-code-block"
        >
          Insert Code Block
        </button>
        <button
          data-testid="button-with-tooltip-emoji"
          title="Emoji"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-smile size-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M8 14s1.5 2 4 2 4-2 4-2"
            />
            <line
              x1="9"
              x2="9.01"
              y1="9"
              y2="9"
            />
            <line
              x1="15"
              x2="15.01"
              y1="9"
              y2="9"
            />
          </svg>
        </button>
        <button
          data-testid="button-with-tooltip-markdown"
          title="Markdown"
        >
          <svg
            class="size-6"
            fill="none"
            height="24"
            viewBox="0 0 208 128"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="m15 10c-2.7614 0-5 2.2386-5 5v98c0 2.761 2.2386 5 5 5h178c2.761 0 5-2.239 5-5v-98c0-2.7614-2.239-5-5-5zm-15 5c0-8.28427 6.71573-15 15-15h178c8.284 0 15 6.71573 15 15v98c0 8.284-6.716 15-15 15h-178c-8.28427 0-15-6.716-15-15z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              d="m30 98v-68h20l20 25 20-25h20v68h-20v-39l-20 25-20-25v39zm125 0-30-33h20v-35h20v35h20z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        data-testid="editor-content"
      >
        Editor Content
      </div>
    </div>
    <div
      class="cursor-auto flex-row items-center gap-x-2 rounded-md p-2 bg-yellow-500/15 text-yellow-500"
      data-testid="max-length-warning"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert size-4 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <span
        class="text-sm"
        data-override-defaults="true"
      >
        You're approaching the maximum character limit.
      </span>
    </div>
  </div>
</div>
`;

exports[`InitializedMDXEditor - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="gap-4"
>
  <div
    class="hidden"
    data-override-defaults="true"
  >
    <div
      aria-label="Markdown editing toolbar"
      class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
      data-override-defaults="true"
      data-testid="markdown-toolbar"
      role="toolbar"
    >
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
        data-size="icon"
        data-testid="markdown-emoji-button"
        data-variant="ghost"
        title="Emoji"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-smile size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M8 14s1.5 2 4 2 4-2 4-2"
          />
          <line
            x1="9"
            x2="9.01"
            y1="9"
            y2="9"
          />
          <line
            x1="15"
            x2="15.01"
            y1="9"
            y2="9"
          />
        </svg>
      </button>
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
        data-size="icon"
        data-testid="markdown-richtext-button"
        data-variant="ghost"
        title="Rich Text"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-type size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 4v16"
          />
          <path
            d="M4 7V5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2"
          />
          <path
            d="M9 20h6"
          />
        </svg>
      </button>
    </div>
    <textarea
      autocomplete="off"
      class="max-h-[60dvh] min-h-11 rounded-none pt-4 font-normal text-foreground placeholder:text-muted-foreground/70"
      data-testid="markdown-textarea"
      maxlength="1000"
      placeholder="Start writing your masterpiece"
      variant="inline"
    />
  </div>
  <div
    class="absolute"
    data-testid="mdx-editor-overlay-container"
  />
  <div
    class="custom-editor-class"
    data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
    data-placeholder="Start writing your masterpiece"
    data-plugins-count="10"
    data-testid="mdx-editor"
    markdown=""
  >
    <div
      data-testid="toolbar"
    >
      <button
        data-testid="undo-redo"
      >
        Undo/Redo
      </button>
      <button
        data-testid="block-type-select"
      >
        Block Type
      </button>
      <button
        data-testid="bold-italic-toggles"
      >
        Bold/Italic
      </button>
      <button
        data-testid="strikethrough-toggle"
      >
        Strikethrough
      </button>
      <button
        data-testid="lists-toggle"
      >
        Lists
      </button>
      <button
        data-testid="insert-thematic-break"
      >
        Insert Break
      </button>
      <button
        data-testid="create-link"
      >
        Create Link
      </button>
      <button
        data-testid="code-toggle"
      >
        Code
      </button>
      <button
        data-testid="insert-code-block"
      >
        Insert Code Block
      </button>
      <button
        data-testid="button-with-tooltip-emoji"
        title="Emoji"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-smile size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M8 14s1.5 2 4 2 4-2 4-2"
          />
          <line
            x1="9"
            x2="9.01"
            y1="9"
            y2="9"
          />
          <line
            x1="15"
            x2="15.01"
            y1="9"
            y2="9"
          />
        </svg>
      </button>
      <button
        data-testid="button-with-tooltip-markdown"
        title="Markdown"
      >
        <svg
          class="size-6"
          fill="none"
          height="24"
          viewBox="0 0 208 128"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="m15 10c-2.7614 0-5 2.2386-5 5v98c0 2.761 2.2386 5 5 5h178c2.761 0 5-2.239 5-5v-98c0-2.7614-2.239-5-5-5zm-15 5c0-8.28427 6.71573-15 15-15h178c8.284 0 15 6.71573 15 15v98c0 8.284-6.716 15-15 15h-178c-8.28427 0-15-6.716-15-15z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            d="m30 98v-68h20l20 25 20-25h20v68h-20v-39l-20 25-20-25v39zm125 0-30-33h20v-35h20v35h20z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      data-testid="editor-content"
    >
      Editor Content
    </div>
  </div>
</div>
`;

exports[`InitializedMDXEditor - Snapshots > matches snapshot with default props 1`] = `
<div
  class="gap-4"
>
  <div
    class="hidden"
    data-override-defaults="true"
  >
    <div
      aria-label="Markdown editing toolbar"
      class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
      data-override-defaults="true"
      data-testid="markdown-toolbar"
      role="toolbar"
    >
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
        data-size="icon"
        data-testid="markdown-emoji-button"
        data-variant="ghost"
        title="Emoji"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-smile size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M8 14s1.5 2 4 2 4-2 4-2"
          />
          <line
            x1="9"
            x2="9.01"
            y1="9"
            y2="9"
          />
          <line
            x1="15"
            x2="15.01"
            y1="9"
            y2="9"
          />
        </svg>
      </button>
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
        data-size="icon"
        data-testid="markdown-richtext-button"
        data-variant="ghost"
        title="Rich Text"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-type size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 4v16"
          />
          <path
            d="M4 7V5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2"
          />
          <path
            d="M9 20h6"
          />
        </svg>
      </button>
    </div>
    <textarea
      autocomplete="off"
      class="max-h-[60dvh] min-h-11 rounded-none pt-4 font-normal text-foreground placeholder:text-muted-foreground/70"
      data-testid="markdown-textarea"
      maxlength="1000"
      placeholder="Start writing your masterpiece"
      variant="inline"
    />
  </div>
  <div
    class="absolute"
    data-testid="mdx-editor-overlay-container"
  />
  <div
    class="dark-theme cursor-auto"
    data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
    data-placeholder="Start writing your masterpiece"
    data-plugins-count="10"
    data-testid="mdx-editor"
    markdown=""
  >
    <div
      data-testid="toolbar"
    >
      <button
        data-testid="undo-redo"
      >
        Undo/Redo
      </button>
      <button
        data-testid="block-type-select"
      >
        Block Type
      </button>
      <button
        data-testid="bold-italic-toggles"
      >
        Bold/Italic
      </button>
      <button
        data-testid="strikethrough-toggle"
      >
        Strikethrough
      </button>
      <button
        data-testid="lists-toggle"
      >
        Lists
      </button>
      <button
        data-testid="insert-thematic-break"
      >
        Insert Break
      </button>
      <button
        data-testid="create-link"
      >
        Create Link
      </button>
      <button
        data-testid="code-toggle"
      >
        Code
      </button>
      <button
        data-testid="insert-code-block"
      >
        Insert Code Block
      </button>
      <button
        data-testid="button-with-tooltip-emoji"
        title="Emoji"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-smile size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M8 14s1.5 2 4 2 4-2 4-2"
          />
          <line
            x1="9"
            x2="9.01"
            y1="9"
            y2="9"
          />
          <line
            x1="15"
            x2="15.01"
            y1="9"
            y2="9"
          />
        </svg>
      </button>
      <button
        data-testid="button-with-tooltip-markdown"
        title="Markdown"
      >
        <svg
          class="size-6"
          fill="none"
          height="24"
          viewBox="0 0 208 128"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="m15 10c-2.7614 0-5 2.2386-5 5v98c0 2.761 2.2386 5 5 5h178c2.761 0 5-2.239 5-5v-98c0-2.7614-2.239-5-5-5zm-15 5c0-8.28427 6.71573-15 15-15h178c8.284 0 15 6.71573 15 15v98c0 8.284-6.716 15-15 15h-178c-8.28427 0-15-6.716-15-15z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            d="m30 98v-68h20l20 25 20-25h20v68h-20v-39l-20 25-20-25v39zm125 0-30-33h20v-35h20v35h20z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      data-testid="editor-content"
    >
      Editor Content
    </div>
  </div>
</div>
`;

exports[`InitializedMDXEditor - Snapshots > matches snapshot with emoji picker open 1`] = `
<div
  class="gap-4"
>
  <div
    class="hidden"
    data-override-defaults="true"
  >
    <div
      aria-label="Markdown editing toolbar"
      class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
      data-override-defaults="true"
      data-testid="markdown-toolbar"
      role="toolbar"
    >
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
        data-size="icon"
        data-testid="markdown-emoji-button"
        data-variant="ghost"
        title="Emoji"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-smile size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M8 14s1.5 2 4 2 4-2 4-2"
          />
          <line
            x1="9"
            x2="9.01"
            y1="9"
            y2="9"
          />
          <line
            x1="15"
            x2="15.01"
            y1="9"
            y2="9"
          />
        </svg>
      </button>
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
        data-size="icon"
        data-testid="markdown-richtext-button"
        data-variant="ghost"
        title="Rich Text"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-type size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 4v16"
          />
          <path
            d="M4 7V5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2"
          />
          <path
            d="M9 20h6"
          />
        </svg>
      </button>
    </div>
    <textarea
      autocomplete="off"
      class="max-h-[60dvh] min-h-11 rounded-none pt-4 font-normal text-foreground placeholder:text-muted-foreground/70"
      data-testid="markdown-textarea"
      maxlength="1000"
      placeholder="Start writing your masterpiece"
      variant="inline"
    />
  </div>
  <div
    class="absolute"
    data-testid="mdx-editor-overlay-container"
  />
  <div
    class="dark-theme cursor-auto"
    data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
    data-placeholder="Start writing your masterpiece"
    data-plugins-count="10"
    data-testid="mdx-editor"
    markdown=""
  >
    <div
      data-testid="toolbar"
    >
      <button
        data-testid="undo-redo"
      >
        Undo/Redo
      </button>
      <button
        data-testid="block-type-select"
      >
        Block Type
      </button>
      <button
        data-testid="bold-italic-toggles"
      >
        Bold/Italic
      </button>
      <button
        data-testid="strikethrough-toggle"
      >
        Strikethrough
      </button>
      <button
        data-testid="lists-toggle"
      >
        Lists
      </button>
      <button
        data-testid="insert-thematic-break"
      >
        Insert Break
      </button>
      <button
        data-testid="create-link"
      >
        Create Link
      </button>
      <button
        data-testid="code-toggle"
      >
        Code
      </button>
      <button
        data-testid="insert-code-block"
      >
        Insert Code Block
      </button>
      <button
        data-testid="button-with-tooltip-emoji"
        title="Emoji"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-smile size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M8 14s1.5 2 4 2 4-2 4-2"
          />
          <line
            x1="9"
            x2="9.01"
            y1="9"
            y2="9"
          />
          <line
            x1="15"
            x2="15.01"
            y1="9"
            y2="9"
          />
        </svg>
      </button>
      <button
        data-testid="button-with-tooltip-markdown"
        title="Markdown"
      >
        <svg
          class="size-6"
          fill="none"
          height="24"
          viewBox="0 0 208 128"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="m15 10c-2.7614 0-5 2.2386-5 5v98c0 2.761 2.2386 5 5 5h178c2.761 0 5-2.239 5-5v-98c0-2.7614-2.239-5-5-5zm-15 5c0-8.28427 6.71573-15 15-15h178c8.284 0 15 6.71573 15 15v98c0 8.284-6.716 15-15 15h-178c-8.28427 0-15-6.716-15-15z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            d="m30 98v-68h20l20 25 20-25h20v68h-20v-39l-20 25-20-25v39zm125 0-30-33h20v-35h20v35h20z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      data-testid="editor-content"
    >
      Editor Content
    </div>
  </div>
  <div
    data-testid="emoji-picker-dialog"
  >
    <button
      data-testid="emoji-select-button"
    >
      Select Emoji
    </button>
  </div>
</div>
`;

exports[`InitializedMDXEditor - Snapshots > matches snapshot with markdown content 1`] = `
<div
  class="gap-4"
>
  <div
    class="hidden"
    data-override-defaults="true"
  >
    <div
      aria-label="Markdown editing toolbar"
      class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
      data-override-defaults="true"
      data-testid="markdown-toolbar"
      role="toolbar"
    >
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
        data-size="icon"
        data-testid="markdown-emoji-button"
        data-variant="ghost"
        title="Emoji"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-smile size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M8 14s1.5 2 4 2 4-2 4-2"
          />
          <line
            x1="9"
            x2="9.01"
            y1="9"
            y2="9"
          />
          <line
            x1="15"
            x2="15.01"
            y1="9"
            y2="9"
          />
        </svg>
      </button>
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
        data-size="icon"
        data-testid="markdown-richtext-button"
        data-variant="ghost"
        title="Rich Text"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-type size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 4v16"
          />
          <path
            d="M4 7V5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2"
          />
          <path
            d="M9 20h6"
          />
        </svg>
      </button>
    </div>
    <textarea
      autocomplete="off"
      class="max-h-[60dvh] min-h-11 rounded-none pt-4 font-normal text-foreground placeholder:text-muted-foreground/70"
      data-testid="markdown-textarea"
      maxlength="1000"
      placeholder="Start writing your masterpiece"
      variant="inline"
    />
  </div>
  <div
    class="absolute"
    data-testid="mdx-editor-overlay-container"
  />
  <div
    class="dark-theme cursor-auto"
    data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
    data-placeholder="Start writing your masterpiece"
    data-plugins-count="10"
    data-testid="mdx-editor"
    markdown="# Test Content"
  >
    <div
      data-testid="toolbar"
    >
      <button
        data-testid="undo-redo"
      >
        Undo/Redo
      </button>
      <button
        data-testid="block-type-select"
      >
        Block Type
      </button>
      <button
        data-testid="bold-italic-toggles"
      >
        Bold/Italic
      </button>
      <button
        data-testid="strikethrough-toggle"
      >
        Strikethrough
      </button>
      <button
        data-testid="lists-toggle"
      >
        Lists
      </button>
      <button
        data-testid="insert-thematic-break"
      >
        Insert Break
      </button>
      <button
        data-testid="create-link"
      >
        Create Link
      </button>
      <button
        data-testid="code-toggle"
      >
        Code
      </button>
      <button
        data-testid="insert-code-block"
      >
        Insert Code Block
      </button>
      <button
        data-testid="button-with-tooltip-emoji"
        title="Emoji"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-smile size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M8 14s1.5 2 4 2 4-2 4-2"
          />
          <line
            x1="9"
            x2="9.01"
            y1="9"
            y2="9"
          />
          <line
            x1="15"
            x2="15.01"
            y1="9"
            y2="9"
          />
        </svg>
      </button>
      <button
        data-testid="button-with-tooltip-markdown"
        title="Markdown"
      >
        <svg
          class="size-6"
          fill="none"
          height="24"
          viewBox="0 0 208 128"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="m15 10c-2.7614 0-5 2.2386-5 5v98c0 2.761 2.2386 5 5 5h178c2.761 0 5-2.239 5-5v-98c0-2.7614-2.239-5-5-5zm-15 5c0-8.28427 6.71573-15 15-15h178c8.284 0 15 6.71573 15 15v98c0 8.284-6.716 15-15 15h-178c-8.28427 0-15-6.716-15-15z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            d="m30 98v-68h20l20 25 20-25h20v68h-20v-39l-20 25-20-25v39zm125 0-30-33h20v-35h20v35h20z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      data-testid="editor-content"
    >
      Editor Content
    </div>
  </div>
</div>
`;

exports[`InitializedMDXEditor - Snapshots > matches snapshot with reached max length warning 1`] = `
<div>
  <div
    class="gap-4"
  >
    <div
      class="hidden"
      data-override-defaults="true"
    >
      <div
        aria-label="Markdown editing toolbar"
        class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
        data-override-defaults="true"
        data-testid="markdown-toolbar"
        role="toolbar"
      >
        <button
          class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
          data-size="icon"
          data-testid="markdown-emoji-button"
          data-variant="ghost"
          title="Emoji"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-smile size-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M8 14s1.5 2 4 2 4-2 4-2"
            />
            <line
              x1="9"
              x2="9.01"
              y1="9"
              y2="9"
            />
            <line
              x1="15"
              x2="15.01"
              y1="9"
              y2="9"
            />
          </svg>
        </button>
        <button
          class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
          data-size="icon"
          data-testid="markdown-richtext-button"
          data-variant="ghost"
          title="Rich Text"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-type size-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 4v16"
            />
            <path
              d="M4 7V5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2"
            />
            <path
              d="M9 20h6"
            />
          </svg>
        </button>
      </div>
      <textarea
        autocomplete="off"
        class="max-h-[60dvh] min-h-11 rounded-none pt-4 font-normal text-foreground placeholder:text-muted-foreground/70"
        data-testid="markdown-textarea"
        maxlength="1000"
        placeholder="Start writing your masterpiece"
        variant="inline"
      />
    </div>
    <div
      class="absolute"
      data-testid="mdx-editor-overlay-container"
    />
    <div
      class="dark-theme cursor-auto"
      data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
      data-placeholder="Start writing your masterpiece"
      data-plugins-count="10"
      data-testid="mdx-editor"
      markdown=""
    >
      <div
        data-testid="toolbar"
      >
        <button
          data-testid="undo-redo"
        >
          Undo/Redo
        </button>
        <button
          data-testid="block-type-select"
        >
          Block Type
        </button>
        <button
          data-testid="bold-italic-toggles"
        >
          Bold/Italic
        </button>
        <button
          data-testid="strikethrough-toggle"
        >
          Strikethrough
        </button>
        <button
          data-testid="lists-toggle"
        >
          Lists
        </button>
        <button
          data-testid="insert-thematic-break"
        >
          Insert Break
        </button>
        <button
          data-testid="create-link"
        >
          Create Link
        </button>
        <button
          data-testid="code-toggle"
        >
          Code
        </button>
        <button
          data-testid="insert-code-block"
        >
          Insert Code Block
        </button>
        <button
          data-testid="button-with-tooltip-emoji"
          title="Emoji"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-smile size-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M8 14s1.5 2 4 2 4-2 4-2"
            />
            <line
              x1="9"
              x2="9.01"
              y1="9"
              y2="9"
            />
            <line
              x1="15"
              x2="15.01"
              y1="9"
              y2="9"
            />
          </svg>
        </button>
        <button
          data-testid="button-with-tooltip-markdown"
          title="Markdown"
        >
          <svg
            class="size-6"
            fill="none"
            height="24"
            viewBox="0 0 208 128"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="m15 10c-2.7614 0-5 2.2386-5 5v98c0 2.761 2.2386 5 5 5h178c2.761 0 5-2.239 5-5v-98c0-2.7614-2.239-5-5-5zm-15 5c0-8.28427 6.71573-15 15-15h178c8.284 0 15 6.71573 15 15v98c0 8.284-6.716 15-15 15h-178c-8.28427 0-15-6.716-15-15z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              d="m30 98v-68h20l20 25 20-25h20v68h-20v-39l-20 25-20-25v39zm125 0-30-33h20v-35h20v35h20z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        data-testid="editor-content"
      >
        Editor Content
      </div>
    </div>
    <div
      class="cursor-auto flex-row items-center gap-x-2 rounded-md p-2 bg-red-500/15 text-red-500"
      data-testid="max-length-warning"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert size-4 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <span
        class="text-sm"
        data-override-defaults="true"
      >
        You've reached the maximum character limit.
      </span>
    </div>
  </div>
</div>
`;

exports[`InitializedMDXEditor - Snapshots > matches snapshot with readOnly prop 1`] = `
<div
  class="gap-4"
>
  <div
    class="hidden"
    data-override-defaults="true"
  >
    <div
      aria-label="Markdown editing toolbar"
      class="flex min-h-10.75 cursor-auto flex-wrap items-center gap-2 rounded-md border bg-background px-2.5 py-1.5"
      data-override-defaults="true"
      data-testid="markdown-toolbar"
      role="toolbar"
    >
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
        data-size="icon"
        data-testid="markdown-emoji-button"
        data-variant="ghost"
        disabled=""
        title="Emoji"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-smile size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M8 14s1.5 2 4 2 4-2 4-2"
          />
          <line
            x1="9"
            x2="9.01"
            y1="9"
            y2="9"
          />
          <line
            x1="15"
            x2="15.01"
            y1="9"
            y2="9"
          />
        </svg>
      </button>
      <button
        class="size-7 cursor-default rounded disabled:pointer-events-auto disabled:opacity-100"
        data-size="icon"
        data-testid="markdown-richtext-button"
        data-variant="ghost"
        disabled=""
        title="Rich Text"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-type size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 4v16"
          />
          <path
            d="M4 7V5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2"
          />
          <path
            d="M9 20h6"
          />
        </svg>
      </button>
    </div>
    <textarea
      autocomplete="off"
      class="max-h-[60dvh] min-h-11 rounded-none pt-4 font-normal text-foreground placeholder:text-muted-foreground/70"
      data-testid="markdown-textarea"
      maxlength="1000"
      placeholder="Start writing your masterpiece"
      readonly=""
      variant="inline"
    />
  </div>
  <div
    class="absolute"
    data-testid="mdx-editor-overlay-container"
  />
  <div
    class="dark-theme cursor-auto"
    data-content-editable-class="prose prose-neutral prose-invert prose-code:before:content-none prose-code:after:content-none max-w-none px-0! pb-0! pt-4! max-h-[60dvh] overflow-y-auto"
    data-placeholder="Start writing your masterpiece"
    data-plugins-count="10"
    data-readonly="true"
    data-testid="mdx-editor"
    markdown=""
  >
    <div
      data-testid="toolbar"
    >
      <button
        data-testid="undo-redo"
      >
        Undo/Redo
      </button>
      <button
        data-testid="block-type-select"
      >
        Block Type
      </button>
      <button
        data-testid="bold-italic-toggles"
      >
        Bold/Italic
      </button>
      <button
        data-testid="strikethrough-toggle"
      >
        Strikethrough
      </button>
      <button
        data-testid="lists-toggle"
      >
        Lists
      </button>
      <button
        data-testid="insert-thematic-break"
      >
        Insert Break
      </button>
      <button
        data-testid="create-link"
      >
        Create Link
      </button>
      <button
        data-testid="code-toggle"
      >
        Code
      </button>
      <button
        data-testid="insert-code-block"
      >
        Insert Code Block
      </button>
      <button
        data-testid="button-with-tooltip-emoji"
        title="Emoji"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-smile size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M8 14s1.5 2 4 2 4-2 4-2"
          />
          <line
            x1="9"
            x2="9.01"
            y1="9"
            y2="9"
          />
          <line
            x1="15"
            x2="15.01"
            y1="9"
            y2="9"
          />
        </svg>
      </button>
      <button
        data-testid="button-with-tooltip-markdown"
        title="Markdown"
      >
        <svg
          class="size-6"
          fill="none"
          height="24"
          viewBox="0 0 208 128"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="m15 10c-2.7614 0-5 2.2386-5 5v98c0 2.761 2.2386 5 5 5h178c2.761 0 5-2.239 5-5v-98c0-2.7614-2.239-5-5-5zm-15 5c0-8.28427 6.71573-15 15-15h178c8.284 0 15 6.71573 15 15v98c0 8.284-6.716 15-15 15h-178c-8.28427 0-15-6.716-15-15z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            d="m30 98v-68h20l20 25 20-25h20v68h-20v-39l-20 25-20-25v39zm125 0-30-33h20v-35h20v35h20z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      data-testid="editor-content"
    >
      Editor Content
    </div>
  </div>
</div>
`;
